# Navigation

./: .gitignore  README.md
amo/: activation_utils.py  amo_inference.py  amo_policy.py  joint_filters.py
amo/tests/: test_joint_filters.py
docker/: Dockerfile.amo_policy  Dockerfile.localization  Dockerfile.unitree  docker-compose.yml  run_amo.sh
docker/config/: amo_g1.yaml
docker/policies/: README.md
docs/: A_STAR_MPC_PLANNER.md  DLIO_DEPLOYMENT_TESTING.md  GROUND_REMOVAL_PLAN.md  GROUND_SEGMENTATION.md  LOCAL_VOXEL_MAP.md  amo_inference_plan.md  dockerfiles.md  system_architecture.md
policy/: RoboJuDo
ros2_ws/: .gitignore  autonomy.sh
ros2_ws/src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/: CMakeLists.txt
ros2_ws/src/a_star_mpc_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/a_star_mpc_planner/a_star_mpc_planner/: a_star_node.py  a_star_planner.py  external_grid_map.py  gaussian_grid_map.py  mpc_node.py  mpc_tracker.py  persistent_map.py  slam_map_utils.py
ros2_ws/src/a_star_mpc_planner/config/: planner_params_default.yaml
ros2_ws/src/a_star_mpc_planner/launch/: planner.launch.py
ros2_ws/src/a_star_mpc_planner/test/: test_external_grid.py  test_slam_map_fusion.py
ros2_ws/src/g1_bringup/launch/: real_localization.launch.py
ros2_ws/src/g1_bringup/rviz/: g1_dlio.rviz
ros2_ws/src/g1_local_map/: package.xml  setup.py
ros2_ws/src/g1_local_map/config/: local_map.yaml
ros2_ws/src/g1_local_map/g1_local_map/: ground_removal_node.py  ground_segmentation.py  local_voxel_map_node.py
ros2_ws/src/g1_local_map/launch/: local_map.launch.py
ros2_ws/src/g1_local_map/test/: test_ground_segmentation.py
ros2_ws/src/g1_sim_bridge/: setup.py
ros2_ws/src/g1_sim_bridge/config/: dlio_mid360_real.yaml
ros2_ws/src/g1_sim_bridge/g1_sim_bridge/: cmd_vel_to_amo_node.py  estop_keyboard_node.py  imu_rescale_node.py  isaac_dlio_qos_relay_node.py  joy_to_cmdvel_node.py
ros2_ws/src/g1_sim_bridge/launch/: joystick.launch.py  real_teleop.launch.py  sim_localization.launch.py  sim_teleop.launch.py
ros2_ws/src/livox_ros_driver2/: CMakeLists.txt
ros2_ws/src/livox_ros_driver2/config/: MID360_config.json
ros2_ws/src/livox_ros_driver2/src/: lddc.cpp
sim/: _lidar_probe.py  g1_sim_scene.py  isaac_amo_stabilizer.py  launch_g1_sim.sh
sim/usd/: robot_full_warehouse.usd
