<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a_star_mpc_planner</name>
  <version>0.1.0</version>
  <description>
    A* path planner with MPC trajectory tracking for Unitree G1 humanoid
    navigation, adapted to the Navigation DLIO stack. Consumes DLIO odometry
    (/dlio/odom_node/odom) and the g1_local_map ground-removed obstacle cloud
    (/local_voxel_map/obstacles), plans an A* path on a 2.5D Gaussian grid, and
    tracks it with a CasADi/IPOPT nonlinear MPC. Velocity is published as a
    Twist on /mpc/cmd_vel, forwarded to the AMO WebSocket gait by
    g1_sim_bridge/cmd_vel_to_amo_node.
  </description>
  <maintainer email="lorenzo.ortolani@talosrobotics.ai">Lorenzo Ortolani</maintainer>
  <license>MIT</license>

  <author email="lorenzo.ortolani@talosrobotics.ai">Lorenzo Ortolani</author>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <exec_depend>python3-casadi</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
